[project]
name = "test-fourier-transform"
version = "0.1.0"
description = "A set of tests of the Fourier transform"
readme = "README.md"
authors = [
    { name = "cyrraz", email = "code.cyrraz@protonmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.4",
    "scipy>=1.15.2",
]

[project.scripts]
test-fourier-transform = "test_fourier_transform:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
test = [
    "pytest>=8.3.5",
]

[tool.ruff.lint]
extend-select = [
  "ARG",         # flake8-unused-arguments
  "B",           # flake8-bugbear
  "C4",          # flake8-comprehensions
  "EXE",         # flake8-executable
  "FURB",        # refurb
  "G",           # flake8-logging-format
  "I",           # isort
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "PD",          # pandas-vet
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "PYI",         # flake8-pyi
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]
ignore = [
  "PLR2004",        # Magic value in comparison
]
